--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +11,22 @@
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <header class="header">
+        <div class="header-container">
+            <div class="site">
+                <a href="index.html">
+                    <img src="img/logo.svg" alt="Boards" width="135" height="26">
+                </a>
+            </div>
+
+            <button class="navbtn">
+                <i class="fas fa-bars"></i>
+                <span class="sr-only">MENU</span>
+            </button>
+        </div>
+    </header>
 </body>
+
 </html>
