--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header class="header">
-        <div class="header-container">
+        <div class="header-container w-container">
             <div class="site">
                 <a href="index.html">
                     <img src="img/logo.svg" alt="Boards" width="135" height="26">
