--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
             </button>
         </div>
     </header>
-</body>
 
+    <section class="hero">
+        <div class="hero-container w-container">
+            <h1>Stationery Services</h1>
+            <p>便利な道具とサービスをお届けします</p>
+            <a href="#" class="btn">無料で始める</a>
+        </div>
+    </section>
+</body>
 </html>
