--- a/index.html
+++ b/index.html
@@ -160,12 +160,39 @@
             </div>
 
             <ul class="footer-sns">
-                <li><a href=""><i class="fab"></i><span class="sr-only"></span></a></li>
-                <li><a href=""><i class="fab"></i><span class="sr-only"></span></a></li>
-                <li><a href=""><i class="fab"></i><span class="sr-only"></span></a></li>
+                <li>
+                    <a href="#">
+                        <i class="fab fa-twitter"></i>
+                        <span class="sr-only">Twitter</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fab fa-facebook-f"></i>
+                        <span class="sr-only">Facebook</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fab fa-instagram"></i>
+                        <span class="sr-only">Instagram</span>
+                    </a>
+                </li>
             </ul>
- 
+
+            <ul class="footer-menu">
+                <li><a href="#">会社概要</a></li>
+                <li><a href="#">特定商取引法</a></li>
+                <li><a href="#">個人情報の取り扱い</a></li>
+                <li><a href="content.html">サービスの案内</a></li>
+                <li><a href="#">お問い合わせ</a></li>
+            </ul>
+
+            <div class="footer-copy">
+                &copy; Boards Production.
+            </div>
         </div>
     </footer>
+
 </body>
 </html>
