--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <header class="header">
-        <div class="header-container">
+        <div class="header-container w-container">
             <div class="site">
                 <a href="index.html">
                     <img src="img/logo.svg" alt="">
@@ -29,6 +29,14 @@
             </button>
         </div>
     </header>
+
+    <section class="hero">
+        <div class="hero-container w-container">
+            <h1>Stationery Services</h1>
+            <p>便利な道具とサービスをお届けします</p>
+            <a href="#">無料で始める</a>
+        </div>
+    </section>
     
 </body>
 </html>
