--- a/index.html
+++ b/index.html
@@ -34,9 +34,41 @@
         <div class="hero-container w-container">
             <h1>Stationery Services</h1>
             <p>便利な道具とサービスをお届けします</p>
-            <a href="#">無料で始める</a>
+            <a href="#" class="btn">無料で始める</a>
+        </div>
+    </section>
+
+    <section class="imgtext">
+        <div class="imgtext-container w-container">
+            <div class="text">
+                <h2 class="heading-decoration">日常のツールたち</h2>
+                <p>Convenient</p>
+                <p>
+                    どこにでもある、誰でも使ったことがある、普段は存在を意識しないけどないと困るツールたち。
+                    日常をちょっとたのしくしてくれます。
+                </p>
+            </div>
+            <figure class="img">
+                <img src="img/tool.jpg" alt="" width="1600" height="1260">
+            </figure>
         </div>
     </section>
     
+    <section class="imgtext">
+        <div class="imgtext-container reverse w-container">
+            <div class="text">
+                <h2 class="heading-decoration">効率化の手助け</h2>
+                <p>Helpful</p>
+                <p>
+                    さまざまな作業を効率よく進めるためには、目的に応じて最適な道具を使うことが大切です。
+                    そんな道具たちが揃っています。
+                </p>
+            </div>
+            <figure class="img">
+                <img src="img/helpful.jpg" alt="" width="1600" height="1260">
+            </figure>
+        </div>
+    </section>
+
 </body>
 </html>
