--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="imgtext-container w-container">
             <div class="text">
                 <h2 class="heading-decoration">日常のツールたち</h2>
-                <p>Convinient</p>
+                <p>Convenient</p>
                 <p>
                     どこにでもある、誰でも使ったことがある、普段は存在を意識しないと困るツールたち。
                     日常をちょっと楽しくしてくれます。
